# agent

./: .env.example  .env.local.example  .gitignore  Dockerfile  MARIA_ELEVENLABS_TOOLS_TODO.md  package-lock.json  package.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
11labscompanion/: .env.example  README.md  ecosystem.config.cjs  package.json
deploy/: backup.sh  check-resources.sh  deploy.sh  healthcheck.sh  setup-vm.sh  sync-secrets.sh  validate-arm64.sh
gobierno-queretaro/: .env.example  ARCHITECTURE.md  PACO_PAPER.md  README.md  docker-compose.prod.yml  docker-compose.yml
info-cea/: package.json  wrangler.toml
maria-claude/: .env.example  MARIA_DOCUMENTATION.md  MARIA_SYSTEM_MAP.md  TESTS_REPORT.md  ecosystem.config.cjs  test_deuda.ts
maria-interno/: .env.example  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
maria-v2/: .env.example  .gitignore  README.md  package.json
maria-v3/: .env.example  ecosystem.config.cjs  package-lock.json  package.json
maria-voz/: .env.example  AGORA_TRANSFER_HANDLER_CHANGES.md  ecosystem.config.cjs  package-lock.json  package.json
paco/: .env.example  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml
paco/cli/: api_client.py  config.py  main.py  pyproject.toml
paco/cli/commands/: agents.py  auth.py  infra.py  skills.py  tools.py
process-builder/: agent-builder-n8n  package-lock.json  package.json  tsconfig.json
src/: agent.ts  server.ts  test-porcobrar.ts  test-ticket.ts  tools.ts  types.ts
(+1231 files in other folders)
