[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paco-cli"
version = "0.1.0"
description = "PACO CLI -- power-user tool for agent deployment, tool sync, and infra management"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
paco = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*"]
